--- a/package.json
+++ b/package.json
@@ -4,19 +4,28 @@
   "description": "",
   "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node dist/server.js"
+    "start": "nodemon src/server.ts",
+    "build": "sucrase ./src -d ./dist --transforms typescript,imports"
   },
   "author": "Fabio A. Pouza",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/qrcode": "^1.3.3",
     "@types/speakeasy": "^2.0.4",
+    "nodemon": "^1.19.1",
+    "sucrase": "^3.10.1",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5"
   },
   "dependencies": {
+    "consign": "^0.1.6",
     "express": "^4.16.4",
+    "module-alias": "^2.2.0",
+    "qrcode": "^1.3.3",
     "speakeasy": "^2.0.0"
+  },
+  "_moduleAliases": {
+    "@helpers": "dist/helpers"
   }
 }
