--- a/package.json
+++ b/package.json
@@ -5,20 +5,25 @@
   "main": "dist/server.js",
   "scripts": {
     "start": "nodemon src/server.ts",
-    "build": "sucrase ./src -d ./dist --transforms typescript,imports"
+    "build": "sucrase ./src -d ./dist --transforms typescript,imports",
+    "prod": "tsc -p .",
+    "epa": "node ./dist/server.js"
   },
   "author": "Fabio A. Pouza",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/node": "^12.6.8",
     "@types/qrcode": "^1.3.3",
     "@types/speakeasy": "^2.0.4",
     "nodemon": "^1.19.1",
     "sucrase": "^3.10.1",
+    "ts-node": "^8.3.0",
     "tslint": "^5.16.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.3"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "consign": "^0.1.6",
     "express": "^4.16.4",
     "module-alias": "^2.2.0",
